Refactored the Expense Service and Improved UI